--- a/02-many-to-one-relationships/articles/templates/articles/detail.html
+++ b/02-many-to-one-relationships/articles/templates/articles/detail.html
@@ -9,16 +9,19 @@
   <h1>Detail</h1>
   <h3>{{ article.pk }}번째 글</h3>
   <hr>
+  <p>작성자 : {{ article.user }}</p>
   <p>제목: {{ article.title }}</p>
   <p>내용: {{ article.content }}</p>
   <p>작성일: {{ article.created_at }}</p>
   <p>수정일: {{ article.updated_at }}</p>
   <hr>
-  <a href="{% url "articles:update" article.pk %}">수정</a><br>
-  <form action="{% url "articles:delete" article.pk %}" method="POST">
-    {% csrf_token %}
-    <input type="submit" value="삭제">
-  </form>
+  {% if request.user == article.user %}
+    <a href="{% url "articles:update" article.pk %}">수정</a><br>
+    <form action="{% url "articles:delete" article.pk %}" method="POST">
+      {% csrf_token %}
+      <input type="submit" value="삭제">
+    </form>
+  {% endif %}
   <hr>
 
   {% comment %} 댓글 목록 출력 {% endcomment %}
@@ -26,11 +29,14 @@
   <p>{{ comment|length }}개의 댓글이 있습니다.</p>
   <ul>
     {% for comment in comments %}
-      <li>{{ comment.content }}
-        <form action="{% url "articles:comments_delete" article.pk comment.pk %}" method="POST">
-          {% csrf_token %}
-          <input type="submit" value="삭제">
-        </form>
+      <li>
+        {{ comment.user }} - {{ comment.content }}
+        {% if request.user == comment.user %}
+          <form action="{% url "articles:comments_delete" article.pk comment.pk %}" method="POST">
+            {% csrf_token %}
+            <input type="submit" value="삭제">
+          </form>
+        {% endif %}
       </li>
     {% endfor %}
   </ul>
